--- a/Hello-Service-8085/src/main/resources/application.properties
+++ b/Hello-Service-8085/src/main/resources/application.properties
@@ -16,16 +16,16 @@ management.endpoints.web.base-path=/actuator
 # 設定要公開的 actuator 端點
 # 端點是一個 RESTful API，用於管理和監控應用程序。它們是由Spring Boot Actuator模塊提供的。
 # health, info, env, beans, configprops, loggers, metrics, trace, threaddump, heapdump
-# health: 用於檢查應用程序的健康狀態, 例如: http://localhost:8080/actuator/health
-# info: 用於檢索應用程序的信息, 例如: http://localhost:8080/actuator/info
-# env: 用於檢索應用程序的環境變量, 例如: http://localhost:8080/actuator/env
-# beans: 用於檢索應用程序的所有bean, 例如: http://localhost:8080/actuator/beans
-# configprops: 用於檢索應用程序的所有配置, 例如: http://localhost:8080/actuator/configprops
-# loggers: 用於檢索應用程序的日誌配置, 例如: http://localhost:8080/actuator/loggers
-# metrics: 用於檢索應用程序的指標, 例如: http://localhost:8080/actuator/metrics
-# trace: 用於檢索應用程序的請求跟踪, 例如: http://localhost:8080/actuator/trace
-# threaddump: 用於檢索應用程序的線程信息, 例如: http://localhost:8080/actuator/threaddump
-# heapdump: 用於檢索應用程序的堆信息, 例如: http://localhost:8080/actuator/heapdump
+# health: 用於檢查應用程序的健康狀態,      例如: /actuator/health
+# info: 用於檢索應用程序的信息,           例如: /actuator/info
+# env: 用於檢索應用程序的環境變量,         例如: /actuator/env
+# beans: 用於檢索應用程序的所有bean,      例如: /actuator/beans
+# configprops: 用於檢索應用程序的所有配置, 例如: /actuator/configprops
+# loggers: 用於檢索應用程序的日誌配置,     例如: /actuator/loggers
+# metrics: 用於檢索應用程序的指標,        例如: /actuator/metrics
+# trace: 用於檢索應用程序的請求跟踪,       例如: /actuator/trace
+# threaddump: 用於檢索應用程序的線程信息,  例如: /actuator/threaddump
+# heapdump: 用於檢索應用程序的堆信息,      例如: /actuator/heapdump
 management.endpoints.web.exposure.include=*
 
 # 顯示健康狀態的詳細信息
