--- a/Hello-Service-8085/pom.xml
+++ b/Hello-Service-8085/pom.xml
@@ -13,15 +13,24 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>Hello-Service-8085</name>
 	<description>Hello-Service project for Spring Boot</description>
+	
 	<properties>
 		<java.version>17</java.version>
 		<spring-cloud.version>2023.0.2</spring-cloud.version>
 	</properties>
+	
 	<dependencies>
+		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+			
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+		
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
