--- a/Hello-Service-8085/src/main/resources/application.properties
+++ b/Hello-Service-8085/src/main/resources/application.properties
@@ -4,8 +4,14 @@ spring.application.name=Hello-Service-8085
 # 應用端口
 server.port=8085
 
+# 使用 IP 地址註冊
+eureka.instance.prefer-ip-address=true
+
+# 註冊中心 ip 地址
+eureka.instance.ip-address=10.100.53.58
+
 # 註冊中心位置
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+eureka.client.serviceUrl.defaultZone=http://${eureka.instance.ip-address}:8761/eureka/
 
 # 變更顯示在註冊中心的 id 名稱
 eureka.instance.instance-id=${spring.application.name}:${server.port}
