--- a/Hello-Service-8085/src/main/resources/application.properties
+++ b/Hello-Service-8085/src/main/resources/application.properties
@@ -16,6 +16,14 @@ eureka.client.serviceUrl.defaultZone=http://${eureka.instance.ip-address}:8761/e
 # 變更顯示在註冊中心的 id 名稱
 eureka.instance.instance-id=${spring.application.name}:${server.port}
 
+# 心跳間隔，單位為秒
+# 這些設置確保了 welcome-service 每 30 秒向 Eureka 服務器發送一次心跳，
+eureka.instance.lease-renewal-interval-in-seconds=30
+
+# 如果 90 秒內 Eureka 服務器沒有收到心跳，則該服務實例將被視為下線。
+# 實例過期時間，單位為秒
+eureka.instance.lease-expiration-duration-in-seconds=90
+
 # 設定 actuator 的端點路徑
 management.endpoints.web.base-path=/actuator
 
