--- a/Hello-Service-8085/src/main/resources/application.properties
+++ b/Hello-Service-8085/src/main/resources/application.properties
@@ -45,3 +45,4 @@ management.endpoints.web.exposure.include=*
 # 顯示健康狀態的詳細信息
 management.endpoint.health.show-details=always
 
+spring.boot.admin.client.url=http://localhost:9999
