--- a/Hello-Service-8085/src/main/resources/application.properties
+++ b/Hello-Service-8085/src/main/resources/application.properties
@@ -9,6 +9,7 @@ eureka.instance.prefer-ip-address=true
 
 # 註冊中心 ip 地址
 eureka.instance.ip-address=10.100.53.58
+#eureka.instance.ip-address=127.0.0.1
 
 # 註冊中心位置
 eureka.client.serviceUrl.defaultZone=http://${eureka.instance.ip-address}:8761/eureka/
