--- a/Config-server-8888/src/main/resources/application.properties
+++ b/Config-server-8888/src/main/resources/application.properties
@@ -19,3 +19,12 @@ management.endpoints.web.base-path=/actuator
 
 # 設置端點的暴露
 management.endpoints.web.exposure.include=*
+
+# 配置 local 文件儲存庫
+spring.profiles.active=native
+
+# 配置 local 文件儲存庫位置
+spring.cloud.config.server.native.search-locations=classpath:/config
+
+
+
