--- a/Feign-customer-service-9092/src/main/resources/application.properties
+++ b/Feign-customer-service-9092/src/main/resources/application.properties
@@ -1,21 +1,24 @@
+# 透過 config server 取得設定檔
+spring.config.import=optional:configserver:http://10.100.53.58:8888
+
 # 應用名稱
 spring.application.name=Feign-customer-service-9092
 
-# 應用port
-server.port=9092
-
-# Eureka服務器地址
-eureka.instance.prefer-ip-address=true
-eureka.instance.ip-address=10.100.53.58
-
-# Eureka客戶端註冊
-eureka.client.serviceUrl.defaultZone=http://${eureka.instance.ip-address}:8761/eureka/
-
-# 服務實例ID
-eureka.instance.instance-id=${spring.application.name}:${server.port}
-
-# base-path: 設置端點的基本路徑
-management.endpoints.web.base-path=/actuator
-
-# 設置端點的暴露
-management.endpoints.web.exposure.include=*
+## 應用port
+#server.port=9092
+#
+## Eureka服務器地址
+#eureka.instance.prefer-ip-address=true
+#eureka.instance.ip-address=10.100.53.58
+#
+## Eureka客戶端註冊
+#eureka.client.serviceUrl.defaultZone=http://${eureka.instance.ip-address}:8761/eureka/
+#
+## 服務實例ID
+#eureka.instance.instance-id=${spring.application.name}:${server.port}
+#
+## base-path: 設置端點的基本路徑
+#management.endpoints.web.base-path=/actuator
+#
+## 設置端點的暴露
+#management.endpoints.web.exposure.include=*
