--- a/Service-C/src/main/resources/application.properties
+++ b/Service-C/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=service-c
 # 為了要有附載平衡請啟動兩個service-c, 並且修改port
 #server.port=9001
-server.port=9002
+#server.port=9002
+server.port=9003
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
