--- a/Service-B/src/main/resources/application.properties
+++ b/Service-B/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.application.name=service-b
 server.port=8080
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+# 使用"隨機 random"負載策略(預設是輪詢)
+#spring.cloud.loadbalancer.service-c.load-balancer.strategy=random
