--- a/Config-server-8888/src/main/resources/config/Feign-order-service-9093.properties
+++ b/Config-server-8888/src/main/resources/config/Feign-order-service-9093.properties
@@ -2,7 +2,8 @@
 spring.application.name=Feign-order-service-9093
 
 # 應用port
-server.port=9093
+#server.port=9093
+server.port=0
 
 ## Eureka服務器地址
 #eureka.instance.prefer-ip-address=true
