--- a/Config-server-8888/src/main/resources/config/Feign-product-service-9091.properties
+++ b/Config-server-8888/src/main/resources/config/Feign-product-service-9091.properties
@@ -2,7 +2,8 @@
 spring.application.name=Feign-product-service-9091
 
 # 應用port
-server.port=9091
+#server.port=9091
+server.port=0
 
 ## Eureka服務器地址
 #eureka.instance.prefer-ip-address=true
