--- a/Config-server-8888/src/main/resources/config/Feign-customer-service-9092.properties
+++ b/Config-server-8888/src/main/resources/config/Feign-customer-service-9092.properties
@@ -2,7 +2,8 @@
 spring.application.name=Feign-customer-service-9092
 
 # 應用port
-server.port=9092
+#server.port=9092
+server.port=0
 
 ## Eureka服務器地址
 #eureka.instance.prefer-ip-address=true
