--- a/Gateway-Server-80/src/main/resources/application.properties
+++ b/Gateway-Server-80/src/main/resources/application.properties
@@ -5,4 +5,4 @@ spring.config.import=optional:configserver:http://10.100.53.58:8888
 spring.application.name=Gateway-Server-80
 
 # Web應用型態
-spring.main.web-application-type=reactive
+#spring.main.web-application-type=reactive
