--- a/JWT-Server-7001/src/main/resources/application.properties
+++ b/JWT-Server-7001/src/main/resources/application.properties
@@ -1,1 +1,15 @@
+# 應用名稱
 spring.application.name=JWT-Server-7001
+# 應用端口
+server.port=7001
+eureka.instance.prefer-ip-address=true
+eureka.instance.ip-address=10.100.53.58
+#
+## Eureka 客戶端配置
+eureka.client.service-url.defaultZone=http://${eureka.instance.ip-address}:8761/eureka/
+eureka.instance.instance-id=${spring.application.name}:${eureka.instance.ip-address}:${server.port}
+
+## base-path: 設置端點的基本路徑
+management.endpoints.web.base-path=/actuator
+## 要公開的端點
+management.endpoints.web.exposure.include=*
