--- a/TX-Transaction-8080/src/main/resources/application.properties
+++ b/TX-Transaction-8080/src/main/resources/application.properties
@@ -1,1 +1,14 @@
+# Application Name
 spring.application.name=TX-Transaction-8080
+
+# Port
+server.port=8080
+
+# Eureka
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
+# MySQL
+spring.datasource.url=jdbc:mysql://localhost:3306/web?useSSL=false&serverTimezone=Asia/Taipei&useUnicode=true&characterEncoding=UTF-8
+spring.datasource.username=root
+spring.datasource.password=12345678
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
